# qt_tetris

./: CMakeLists.txt  main.cpp  tetris.cpp  tetris.h  tetris.ui  tetrisboard.cpp  tetrisboard.h  tetrispiece.cpp  tetrispiece.h
